# runner

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  runner.vix  vix.json
examples/: demo.txt
include/softadastra/runner/app/: RunnerApp.hpp
include/softadastra/runner/cli/: Console.hpp  InputParser.hpp  Prompt.hpp
include/softadastra/runner/core/: CommandRequest.hpp  CommandResult.hpp  RunnerService.hpp
include/softadastra/runner/infrastructure/: VixProcessExecutor.hpp
include/softadastra/runner/utils/: StringUtils.hpp
src/: main.cpp
src/app/: RunnerApp.cpp
src/cli/: Console.cpp  InputParser.cpp  Prompt.cpp
src/core/: RunnerService.cpp
src/infrastructure/: VixProcessExecutor.cpp
src/utils/: StringUtils.cpp
tests/: test_basic.cpp  test_cli.cpp
